--- a/less/utilities.less
+++ b/less/utilities.less
@@ -156,7 +156,7 @@
 
 //#$Panel
 .panel-wrapper{
-    position: absolute;
+    position: relative;
     top: 0;
     left: 0;
     width: 100%;
@@ -175,4 +175,11 @@
         padding-bottom: 30px;
         background-color: @header-child-menu-panel-bg-color;
     }
+}
+@media @mobile-devices-screen{
+    .panel-wrapper{
+        .panel-title{
+            width: 100%;
+        }  
+    }  
 }
